--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,8 @@ precommit = "pre-commit install"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.coverage.run]
+branch = true
+source_pkgs = ["botcore"]
+source = ["tests"]
