--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -41,15 +41,15 @@ jobs:
         run: "flake8 \
         --format='::error file=%(path)s,line=%(row)d,col=%(col)d::[flake8] %(code)s: %(text)s'"
 
-      - name: Run tests and generate coverage report
-        run: pytest -n auto --cov --disable-warnings -q
-
-      # This step will publish the coverage reports coveralls.io and
-      # print a "job" link in the output of the GitHub Action
-      - name: Publish coverage report to coveralls.io
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: coveralls
+#      - name: Run tests and generate coverage report
+#        run: pytest -n auto --cov --disable-warnings -q
+#
+#      # This step will publish the coverage reports coveralls.io and
+#      # print a "job" link in the output of the GitHub Action
+#      - name: Publish coverage report to coveralls.io
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        run: coveralls
 
       # Prepare the Pull Request Payload artifact. If this fails, we
       # we fail silently using the `continue-on-error` option. It's
