Add Sphinx Docs
Adds a customized sphinx doc builder.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,14 @@ packages = [
 exclude = ["tests", "tests.*"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "3.9.*"
 "discord.py" = "^1.7.2"
+Sphinx = "^4.3.1"
+tomli = "^1.2.2"
+GitPython = "^3.1.24"
+sphinx-autodoc-typehints = "^1.12.0"
+releases = "^1.6.3"
+furo = "^2021.11.23"
 
 [tool.poetry.dev-dependencies]
 flake8 = "~=3.8"
@@ -38,6 +44,9 @@ pytest-xdist = { version = "~=2.3.0", extras = ["psutil"] }
 [tool.taskipy.tasks]
 lint = "pre-commit run --all-files"
 precommit = "pre-commit install"
+apidoc = "sphinx-apidoc -o docs/output botcore -fe"
+builddoc = "sphinx-build -nW -j auto -b html docs docs/build"
+docs = "task apidoc && task builddoc"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
