--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ exclude = ["tests", "tests.*"]
 [tool.poetry.dependencies]
 python = "^3.9"
 "discord.py" = "^1.7.2"
+async-rediscache = {version = "^0.2.0", extras = ["fakeredis"]}
+aioredis = "1.3.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "~=3.8"
