Update GHA Docs Build To Match Pyproject
Updates the command in GH actions to match the command in pyproject to
generate the correct output.

Kaizens a small fix in clean up.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -31,7 +31,7 @@ jobs:
       - run: pip install six
 
       - name: Generate AutoDoc References
-        run: sphinx-apidoc -o docs/output botcore -fe
+        run: sphinx-apidoc -o docs/output botcore -feM
 
       - name: Generate HTML Site
         run: sphinx-build -nW -j auto -b html docs docs/build
