Revert back to discord.py
This pins at a newer version of Discord.py too, to include the recent changes to bring it up to v10 of the Discord API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,7 @@ exclude = ["tests", "tests.*"]
 
 [tool.poetry.dependencies]
 python = "3.9.*"
-# It is expected that bots that use bot-core will define a striciter version of disnake.
-disnake = "^2"
+"discord.py" = {url = "https://github.com/Rapptz/discord.py/archive/beafaa8a8b8006357c2a1ca6802ed80e000f4cda.zip"}
 
 [tool.poetry.dev-dependencies]
 flake8 = "4.0.1"
