--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ async-rediscache = ["async-rediscache"]
 
 [tool.poetry.dev-dependencies]
 flake8 = "4.0.1"
-flake8-annotations = "2.7.0"
-flake8-bugbear = "22.1.11"
+flake8-annotations = "2.8.0"
+flake8-bugbear = "22.3.23"
 flake8-docstrings = "1.6.0"
 flake8-import-order = "0.18.1"
 flake8-string-format = "0.3.0"
@@ -35,14 +35,14 @@ flake8-todo = "0.7"
 pep8-naming = "0.12.1"
 pre-commit = "2.17.0"
 taskipy = "1.10.1"
-python-dotenv = "0.19.2"
-pytest = "7.0.1"
+python-dotenv = "0.20.0"
+pytest = "7.1.1"
 pytest-cov = "3.0.0"
 pytest-xdist = "2.5.0"
-Sphinx = "4.4.0"
+Sphinx = "4.5.0"
 GitPython = "3.1.27"
 sphinx-autodoc-typehints = "1.17.0"
-furo = "2022.2.23"
+furo = "2022.3.4"
 
 
 [tool.taskipy.tasks]
@@ -51,6 +51,8 @@ precommit = "pre-commit install"
 apidoc = "sphinx-apidoc -o docs/output botcore -feM"
 builddoc = "sphinx-build -nW -j auto -b html docs docs/build"
 docs = "task apidoc && task builddoc"
+test = "pytest -n 8 --ff"
+retest = "pytest -n 8 --lf"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
