Restore Releases Changelog
Add the releases-based changelog system back, and migrate the old
changelog entries.

Signed-off-by: Hassan Abouelela <hassan@hassanamr.com>

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Generate HTML Site
         run: sphinx-build -nW -j auto -b html docs docs/build
 
-      - name: Uplaod Build Artifact
+      - name: Upload Build Artifact
         uses: actions/upload-artifact@v2
         with:
           name: docs
