--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ Sphinx = "4.5.0"
 GitPython = "3.1.27"
 sphinx-autodoc-typehints = "1.18.1"
 furo = "2022.4.7"
-
+releases = "1.6.3"
 
 [tool.taskipy.tasks]
 lint = "pre-commit run --all-files"
