--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -13,8 +13,9 @@ concurrency:
 
 
 jobs:
-  build-deploy:
-    name: Build & Deploy Docs
+  latest-build:
+    # We only need to verify that the docs build with no warnings here
+    name: Build Latest Docs Version
     runs-on: ubuntu-latest
 
     steps:
@@ -31,11 +32,39 @@ jobs:
       # https://github.com/bitprophet/releases/pull/82
       - run: pip install six
 
-      - name: Generate AutoDoc References
-        run: sphinx-apidoc -o docs/output botcore -feM
-
       - name: Generate HTML Site
         run: sphinx-build -nW -j auto -b html docs docs/build
+
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: docs-latest
+          path: docs/build/*
+
+  build-deploy:
+    name: Build & Deploy Docs
+    runs-on: ubuntu-latest
+    needs:
+      - latest-build
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Python Dependencies
+        uses: HassanAbouelela/actions/setup-python@setup-python_v1.1.0
+        with:
+          dev: true
+          python_version: 3.9
+          install_args: "--extras async-rediscache"
+
+      # Undeclared dependency for `releases`... whoops
+      # https://github.com/bitprophet/releases/pull/82
+      - run: pip install six
+
+      - name: Build All Doc Versions
+        run: sphinx-multiversion docs docs/build -n -j auto
+        env:
+          BUILD_DOCS_FOR_HEAD: True
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v2
