--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ statsd  = "3.3.0"
 async-rediscache = ["async-rediscache"]
 
 [tool.poetry.dev-dependencies]
+typing-extensions = "4.2.0"
 flake8 = "4.0.1"
 flake8-annotations = "2.9.0"
 flake8-bugbear = "22.4.25"
