--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python = "3.9.*"
 "discord.py" = {url = "https://github.com/Rapptz/discord.py/archive/0eb3d26343969a25ffc43ba72eca42538d2e7e7a.zip"}
 async-rediscache = { version = "0.2.0", extras = ["fakeredis"], optional = true }
 statsd  = "3.3.0"
+aiodns = "3.0.0"
 
 [tool.poetry.extras]
 async-rediscache = ["async-rediscache"]
