Add Sample Project With Boilerplate
Adds a bare-bones discord.py bot using features from bot-core, to be
used for quickly prototyping and testing out bot-core features.

Signed-off-by: Hassan Abouelela <hassan@hassanamr.com>

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ max-line-length=120
 docstring-convention=all
 import-order-style=pycharm
 application_import_names=botcore,docs,tests
-exclude=.cache,.venv,.git,constants.py
+exclude=.cache,.venv,.git,constants.py,bot/
 ignore=
     B311,W503,E226,S311,T000,E731
     # Missing Docstrings
