--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: HassanAbouelela/actions/setup-python@setup-python_v1.1.0
         with:
           dev: true
-          python_version: 3.9
+          python_version: "3.10"
           install_args: "--extras async-rediscache"
 
       # Undeclared dependency for `releases`... whoops
@@ -54,7 +54,7 @@ jobs:
         uses: HassanAbouelela/actions/setup-python@setup-python_v1.1.0
         with:
           dev: true
-          python_version: 3.9
+          python_version: "3.10"
           install_args: "--extras async-rediscache"
 
       # Undeclared dependency for `releases`... whoops
