--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           # Set dev=true to run pre-commit which is a dev dependency
           dev: true
-          python_version: 3.9
+          python_version: "3.10"
           install_args: "--extras async-rediscache"
 
       # We will not run `flake8` here, as we will use a separate flake8
