--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bot-core"
-version = "8.0.0-beta.2"
+version = "8.0.0-beta.3"
 description = "Bot-Core provides the core functionality and utilities for the bots of the Python Discord community."
 authors = ["Python Discord <info@pythondiscord.com>"]
 license = "MIT"
@@ -17,7 +17,7 @@ exclude = ["tests", "tests.*"]
 [tool.poetry.dependencies]
 python = "3.10.*"
 "discord.py" = {url = "https://github.com/Rapptz/discord.py/archive/0eb3d26343969a25ffc43ba72eca42538d2e7e7a.zip"}
-async-rediscache = { version = "0.2.0", extras = ["fakeredis"], optional = true }
+async-rediscache = { version = "1.0.0rc2", extras = ["fakeredis"], optional = true }
 statsd  = "3.3.0"
 aiodns = "3.0.0"
 
