Delete Metadata Files After Build
Signed-off-by: Hassan Abouelela <hassan@hassanamr.com>

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -67,6 +67,11 @@ jobs:
           BUILD_DOCS_FOR_HEAD: ${{ github.event_name == 'pull_request' }}
           BRANCH_NAME: ${{ github.head_ref }}
 
+      - name: Remove Metadata Files
+        run: |
+          rm -r docs/build/**/_sources
+          rm -r docs/build/**/.doctrees
+
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v2
         with:
