--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,20 @@ services:
       timeout: 1s
       retries: 5
 
+  metricity:
+    restart: on-failure
+    depends_on:
+      postgres:
+        condition: service_healthy
+    image: ghcr.io/python-discord/metricity:latest
+    env_file:
+      - .env
+    environment:
+      DATABASE_URI: postgres://pysite:pysite@postgres/metricity
+      USE_METRICITY: ${USE_METRICITY-false}
+    volumes:
+      - .:/tmp/bot:ro
+
   redis:
     << : *restart_policy
     image: redis:5.0.9
@@ -46,6 +60,8 @@ services:
       METRICITY_DB_URL: postgres://pysite:pysite@postgres:5432/metricity
       SECRET_KEY: suitable-for-development-only
       STATIC_ROOT: /var/www/static
+    depends_on:
+      - metricity
 
   bot:
     << : *restart_policy
@@ -55,6 +71,8 @@ services:
     volumes:
       - .:/app:ro
     tty: true
+    depends_on:
+      - web
     env_file:
       - .env
     environment:
