Don't mount project root in docker-compose
Now that we are using in-project venvs, mounting the entire project root would cause the host's venv to overwrite the image's if present.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,8 +68,9 @@ services:
     build:
       context: .
       dockerfile: dev/Dockerfile
-    volumes:
-      - .:/app:ro
+    volumes:  # Don't do .:/app here to ensure project venv from host doens't overwrite venv in image
+      - ./botcore:/app/botcore:ro
+      - ./bot:/app/bot:ro
     tty: true
     depends_on:
       - web
