--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -4,13 +4,13 @@ FROM --platform=linux/amd64 ghcr.io/chrislovering/python-poetry-base:3.10-slim
 # Install project dependencies
 WORKDIR /app
 COPY pyproject.toml poetry.lock ./
-RUN poetry install --no-root
+RUN poetry install --no-root --without lint,doc,test
 
 # Copy the source code in last to optimize rebuilding the image
 COPY . .
 
 # Install again, this time with the root project
-RUN poetry install
+RUN poetry install --only-root
 
-ENTRYPOINT ["python"]
-CMD ["-m", "bot"]
+ENTRYPOINT ["poetry"]
+CMD ["run", "python", "-m", "bot"]
