--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,31 +32,39 @@ aiodns = "3.0.0"
 [tool.poetry.extras]
 async-rediscache = ["async-rediscache"]
 
-[tool.poetry.dev-dependencies]
-typing-extensions = "4.4.0"
-flake8 = "5.0.4"
+[tool.poetry.group.dev.dependencies]
+taskipy = "1.10.3"
+python-dotenv = "0.21.0"
+
+[tool.poetry.group.test.dependencies]
+pytest = "7.2.0"
+pytest-cov = "4.0.0"
+pytest-xdist = "3.1.0"
+
+[tool.poetry.group.lint.dependencies]
+flake8 = "6.0.0"
 flake8-annotations = "2.9.1"
-flake8-bugbear = "22.10.27"
+flake8-bugbear = "22.12.6"
 flake8-docstrings = "1.6.0"
-flake8-import-order = "0.18.1"
+flake8-import-order = "0.18.2"
 flake8-string-format = "0.3.0"
 flake8-tidy-imports = "4.8.0"
 flake8-todo = "0.7"
 pep8-naming = "0.13.2"
 pre-commit = "2.20.0"
-taskipy = "1.10.3"
-python-dotenv = "0.21.0"
-pytest = "7.2.0"
-pytest-cov = "4.0.0"
-pytest-xdist = "3.0.2"
+typing-extensions = "4.4.0"
+
+[tool.poetry.group.doc.dependencies]
 Sphinx = "5.3.0"
 GitPython = "3.1.29"
 sphinx-autodoc-typehints = "1.19.5"
-furo = "2022.9.29"
+furo = "2022.12.7"
 six = "1.16.0"
 releases = "1.6.3"
 sphinx-multiversion = "0.2.4"
 docstring-parser = "0.15"
+typing-extensions = "4.4.0"
+tomli = "2.0.1"
 
 [tool.taskipy.tasks]
 lint = "pre-commit run --all-files"
