--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -1,10 +1,11 @@
-FROM --platform=linux/amd64 ghcr.io/chrislovering/python-poetry-base:3.10-slim
+ARG python_version=3.11
 
+FROM --platform=linux/amd64 ghcr.io/chrislovering/python-poetry-base:$python_version-slim
 
 # Install project dependencies
 WORKDIR /app
 COPY pyproject.toml poetry.lock ./
-RUN poetry install --no-root --without lint,doc,test
+RUN poetry install --no-root --only dev,main
 
 # Copy the source code in last to optimize rebuilding the image
 COPY . .
