--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,15 +1,8 @@
 name: Build Docs
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
   workflow_dispatch:
-
-concurrency:
-  group: docs-deployment-${{ github.ref }}
-  cancel-in-progress: true
+  workflow_call:
 
 jobs:
   latest-build:
@@ -25,7 +18,7 @@ jobs:
         with:
           dev: true
           python_version: "3.11"
-          install_args: "--extras async-rediscache"
+          install_args: "--extras async-rediscache --only main --only doc"
 
       - name: Generate HTML Site
         run: sphinx-build -nW -j auto -b html docs docs/build
