--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ furo = "2022.9.15"
 six = "1.16.0"
 releases = "1.6.3"
 sphinx-multiversion = "0.2.4"
+docstring-parser = "0.15"
 
 [tool.taskipy.tasks]
 lint = "pre-commit run --all-files"
