--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ docstring-convention=all
 import-order-style=pycharm
 application_import_names=pydis_core,docs,tests
 exclude=.cache,.venv,.git,constants.py,bot/
-ignore=
+extend-ignore=
     B311,W503,E226,S311,T000,E731
     # Missing Docstrings
     D100,D104,D105,D107,
