--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,20 +5,25 @@ repos:
       - id: check-merge-conflict
       - id: check-toml
       - id: check-yaml
-        args: [--unsafe] # Required due to custom constructors (e.g. !ENV)
       - id: end-of-file-fixer
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
-  - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.9.0
-    hooks:
-      - id: python-check-blanket-noqa
+
   - repo: local
     hooks:
-      - id: flake8
-        name: Flake8
-        description: This hook runs flake8 within our project's poetry environment.
-        entry: poetry run flake8
+      - id: isort
+        name: isort
+        description: This hook runs isort within our project's environment.
+        entry: poetry run isort
         language: system
         types: [python]
         require_serial: true
+
+      - id: ruff
+        name: ruff
+        description: Run ruff linting
+        entry: poetry run ruff check --force-exclude
+        language: system
+        'types_or': [python, pyi]
+        require_serial: true
+        args: [--fix, --exit-non-zero-on-fix]
