--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,15 +43,8 @@ pytest-cov = "4.0.0"
 pytest-xdist = "3.2.0"
 
 [tool.poetry.group.lint.dependencies]
-flake8 = "6.0.0"
-flake8-annotations = "3.0.0"
-flake8-bugbear = "23.2.13"
-flake8-docstrings = "1.7.0"
-flake8-import-order = "0.18.2"
-flake8-string-format = "0.3.0"
-flake8-tidy-imports = "4.8.0"
-flake8-todo = "0.7"
-pep8-naming = "0.13.3"
+isort = "5.12.0"
+ruff = "0.0.265"
 pre-commit = "3.1.1"
 typing-extensions = "4.5.0"
 
@@ -82,3 +75,33 @@ build-backend = "poetry.core.masonry.api"
 branch = true
 source_pkgs = ["pydis_core"]
 source = ["tests"]
+
+[tool.isort]
+multi_line_output = 6
+order_by_type = false
+case_sensitive = true
+combine_as_imports = true
+line_length = 120
+atomic = true
+known_first_party = ["dev", "pydis_core", "docs"]
+
+[tool.ruff]
+target-version = "py310"
+extend-exclude = [".cache"]
+ignore = [
+    "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
+    "B904",
+    "C401", "C408",
+    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
+    "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
+    "E731",
+    "RET504",
+    "RUF005",
+    "S311",
+    "SIM102", "SIM108",
+]
+line-length = 120
+select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["ANN", "D"]
