--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ python = "3.10.* || 3.11.*"
 async-rediscache = { version = "1.0.0rc2", extras = ["fakeredis"], optional = true }
 statsd  = "4.0.1"
 aiodns = "3.0.0"
+pydantic = { version = "1.10.8", extras = ["dotenv"]}
 
 [tool.poetry.extras]
 async-rediscache = ["async-rediscache"]
