--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydis_core"
-version = "9.9.2"
+version = "10.0.0"
 description = "PyDis core provides core functionality and utility to the bots of the Python Discord community."
 authors = ["Python Discord <info@pythondiscord.com>"]
 license = "MIT"
@@ -27,6 +27,7 @@ python = "3.10.* || 3.11.*"
 
 "discord.py" = "2.3.1"
 async-rediscache = { version = "1.0.0rc2", extras = ["fakeredis"], optional = true }
+pydantic = ">=1.7.4,<3.0.0"
 statsd  = "4.0.1"
 aiodns = "3.0.0"
 
