run fixup blocker when git ref isn't main
This also makes the lint-test workflow a dependency since as we'd want to run linting on all fixup commits still

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,5 +13,11 @@ concurrency:
 jobs:
   lint-test:
     uses: ./.github/workflows/lint-test.yaml
+
+  fixup-commit-blocker:
+    if: github.ref != 'refs/heads/main'
+    uses: python-discord/.github/.github/workflows/block-fixup-commits.yaml@main
+    needs: lint-test
+
   docs:
     uses: ./.github/workflows/docs.yaml
