--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ pytest-xdist = "3.3.1"
 
 [tool.poetry.group.lint.dependencies]
 isort = "5.12.0"
-ruff = "0.0.275"
+ruff = "0.0.286"
 pre-commit = "3.3.3"
 typing-extensions = "4.6.3"
 
@@ -77,15 +77,6 @@ branch = true
 source_pkgs = ["pydis_core"]
 source = ["tests"]
 
-[tool.isort]
-multi_line_output = 6
-order_by_type = false
-case_sensitive = true
-combine_as_imports = true
-line_length = 120
-atomic = true
-known_first_party = ["dev", "pydis_core", "docs"]
-
 [tool.ruff]
 target-version = "py310"
 extend-exclude = [".cache"]
@@ -102,7 +93,13 @@ ignore = [
     "SIM102", "SIM108",
 ]
 line-length = 120
-select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
+select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "I", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
+
+[tool.ruff.isort]
+order-by-type = false
+case-sensitive = true
+combine-as-imports = true
+known-first-party = ["dev", "pydis_core", "docs"]
 
 [tool.ruff.per-file-ignores]
 "tests/*" = ["ANN", "D"]
