--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,3 +103,4 @@ known-first-party = ["dev", "pydis_core", "docs"]
 
 [tool.ruff.per-file-ignores]
 "tests/*" = ["ANN", "D"]
+"pydis_core/utils/tests/*" = ["ANN", "D"]
