--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ source = ["tests"]
 [tool.ruff]
 target-version = "py310"
 extend-exclude = [".cache"]
+select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "I", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
 ignore = [
     "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
     "B904",
@@ -92,7 +93,8 @@ ignore = [
     "SIM102", "SIM108",
 ]
 line-length = 120
-select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "I", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
+unsafe-fixes = true
+preview = true
 
 [tool.ruff.isort]
 order-by-type = false
