Mark lib deps using tilda version specifiers
This allows users of the lib to use newer versions of these libraries without us having to cut a new release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,11 @@ keywords = ["bot", "discord", "discord.py"]
 [tool.poetry.dependencies]
 python = "3.10.* || 3.11.*"
 
-"discord.py" = "2.3.2"
+"discord.py" = "~=2.3.2"
 async-rediscache = { version = "1.0.0rc2", extras = ["fakeredis"], optional = true }
 pydantic = ">=1.7.4,<3.0.0"
-statsd  = "4.0.1"
-aiodns = "3.1.1"
+statsd  = "~=4.0"
+aiodns = "~=3.1"
 
 [tool.poetry.extras]
 async-rediscache = ["async-rediscache"]
