--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,23 +36,23 @@ async-rediscache = ["async-rediscache"]
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "1.12.2"
-python-dotenv = "1.0.0"
+python-dotenv = "1.0.1"
 
 [tool.poetry.group.test.dependencies]
-pytest = "7.4.3"
+pytest = "8.0.0"
 pytest-cov = "4.1.0"
 pytest-xdist = "3.5.0"
 
 [tool.poetry.group.lint.dependencies]
-ruff = "0.1.7"
+ruff = "0.1.15"
 pre-commit = "3.6.0"
 typing-extensions = "4.9.0"
 
 [tool.poetry.group.doc.dependencies]
 Sphinx = "7.2.6"
-GitPython = "3.1.40"
-sphinx-autodoc-typehints = "1.25.2"
-furo = "2023.9.10"
+gitpython = "3.1.41"
+sphinx-autodoc-typehints = "1.25.3"
+furo = "2024.1.29"
 six = "1.16.0"
 releases = "2.1.1"
 sphinx-multiversion = "0.2.4"
@@ -89,7 +89,7 @@ ignore = [
     "E731",
     "RET504",
     "RUF005",
-    "S311",
+    "S311", "S404",
     "SIM102", "SIM108",
 ]
 line-length = 120
