--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,11 @@ source = ["tests"]
 [tool.ruff]
 target-version = "py310"
 extend-exclude = [".cache"]
+line-length = 120
+unsafe-fixes = true
+preview = true
+
+[tool.ruff.lint]
 select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "I", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
 ignore = [
     "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
@@ -92,15 +97,12 @@ ignore = [
     "S311", "S404",
     "SIM102", "SIM108",
 ]
-line-length = 120
-unsafe-fixes = true
-preview = true
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 order-by-type = false
 case-sensitive = true
 combine-as-imports = true
 known-first-party = ["dev", "pydis_core", "docs"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/*" = ["ANN", "D"]
