--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,23 +79,32 @@ source = ["tests"]
 [tool.ruff]
 target-version = "py310"
 extend-exclude = [".cache"]
+output-format = "concise"
 line-length = 120
 unsafe-fixes = true
 preview = true
 
 [tool.ruff.lint]
-select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "I", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
+select = ["ALL"]
 ignore = [
     "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
     "B904",
-    "C401", "C408",
+    "C401", "C408", "C901",
+    "COM812",
+    "CPY001",
     "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
     "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
     "E731",
+    "EM101", "EM102",
+    "G004",
+    "PLE0604",
+    "PLR",
+    "PT009",
     "RET504",
     "RUF005",
     "S311", "S404",
     "SIM102", "SIM108",
+    "TRY003",
 ]
 
 [tool.ruff.lint.isort]
@@ -105,4 +114,5 @@ combine-as-imports = true
 known-first-party = ["dev", "pydis_core", "docs"]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["ANN", "D"]
+"docs/*" = ["TRY002"]
+"tests/*" = ["ANN", "D", "S101", "SLF001"]
