Drop support for Pydantic 1.X

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ python = "3.10.* || 3.11.*"
 
 "discord.py" = "~=2.3.2"
 async-rediscache = { version = "1.0.0rc2", extras = ["fakeredis"], optional = true }
-pydantic = ">=1.7.4,<3.0.0"
+pydantic = "~=2.6"
 statsd  = "~=4.0"
 aiodns = "~=3.1"
 
