--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,11 @@ repository = "https://github.com/python-discord/bot-core"
 keywords = ["bot", "discord", "discord.py"]
 
 [tool.poetry.dependencies]
-python = "3.10.* || 3.11.*"
+python = "3.10.* || 3.11.* || 3.12.*"
 
 "discord.py" = "~=2.3.2"
 async-rediscache = { version = "1.0.0rc2", optional = true }
-fakeredis = { version = "~=2.0", extras = ["lua"], optional = true }
+fakeredis = { version = "~=2.0", extras = ["lua"], optional = true, python = "<3.12" }
 pydantic = "~=2.6"
 statsd  = "~=4.0"
 aiodns = "~=3.1"
