--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ repository = "https://github.com/python-discord/bot-core"
 keywords = ["bot", "discord", "discord.py"]
 
 [tool.poetry.dependencies]
-python = "3.10.* || 3.11.* || 3.12.*"
+python = "3.11.* || 3.12.*"
 
 "discord.py" = "~=2.3.2"
 async-rediscache = { version = "1.0.0rc2", optional = true }
@@ -49,7 +49,6 @@ pytest-xdist = "3.5.0"
 [tool.poetry.group.lint.dependencies]
 ruff = "0.3.0"
 pre-commit = "3.6.2"
-typing-extensions = "4.10.0"
 
 [tool.poetry.group.doc.dependencies]
 Sphinx = "7.2.6"
@@ -60,7 +59,6 @@ six = "1.16.0"
 releases = "2.1.1"
 sphinx-multiversion = "0.2.4"
 docstring-parser = "0.15"
-typing-extensions = "4.10.0"
 tomli = "2.0.1"
 
 [tool.taskipy.tasks]
