Ignore RUF029, due to false positives and it not being that important

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,7 +102,7 @@ ignore = [
     "PLR",
     "PT009",
     "RET504",
-    "RUF005",
+    "RUF005", "RUF029",
     "S311", "S404",
     "SIM102", "SIM108",
     "TRY003",
