Fix site startup command used in docker-compose.yml
Needed as entrypoint was changed in python-discord/site#1338

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,7 @@ services:
   web:
     << : *restart_policy
     image: ghcr.io/python-discord/site:latest
-    command: ["run", "--debug"]
+    command: ["python", "manage.py", "run"]
     ports:
       - "8000:8000"
     tty: true
