--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,7 @@ ignore = [
     "COM812",
     "CPY001",
     "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
+    "DOC501", "DOC502",
     "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
     "E731",
     "EM101", "EM102",
