--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ extend-exclude = [".cache"]
 output-format = "concise"
 line-length = 120
 unsafe-fixes = true
-preview = true
+preview = false
 
 [tool.ruff.lint]
 select = ["ALL"]
