Remove deprecated ruff rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,7 @@ unsafe-fixes = true
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = [
-    "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
+    "ANN002", "ANN003", "ANN204", "ANN206", "ANN401",
     "B904",
     "C401", "C408", "C901",
     "COM812",
